gowebapp-mysql-service.yaml
apiVersion: v1
kind: Service
metadata: 
  #TODO: give the Service a name: gowebapp-mysql
  name: gowebapp-mysql
  labels:
    #TODO: give the Service a label: app: gowebapp-mysql
    #TODO: give the Service a label: tier: backend
    app: gowebapp-mysql
    tier: backend
spec:
  type: ClusterIP
  ports:
  - #TODO: expose port 3306
    port: 3306
    targetPort: 3306
  selector:
    #TODO: define a selector: app: gowebapp-mysql
    #TODO: define a selector: tier: backend
    app: gowebapp-mysql
    tier: backend
