gowebapp-service.yaml
apiVersion: v1
#TODO: define the kind of object as Service
kind: Service
metadata: 
  #TODO: give the Service a name: gowebapp
  name: gowebapp
  labels:
    #TODO: give the Service a label: app: gowebapp
    #TODO: give the Service a label: tier: frontend
    app: gowebapp
    tier: frontend
spec:
  #TODO: Set service type to NodePort
  type: NodePort
  ports:
  - #TODO: expose port 8080
    port: 8080
  selector:
    #TODO: define a selector: app: gowebapp
    #TODO: define a selector: tier: frontend
    app: gowebapp
    tier: frontend
