gowebapp-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gowebapp-ingress
spec:
  rules:
  - host: ${SESSION_NAMESPACE}-gowebapp.${INGRESS_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gowebapp
            port:
              number: 8080
              
 ### To parse in values for envrionment variables
 ### envsubst < file with env vars | kubectl apply -f -
